demo-aot-api/demo-aot-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-aot-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo-aot-api.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-aot-api-service
                port:
                  number: 80
